manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: website
    app.kubernetes.io/part-of: ninavirus
    app.kubernetes.io/version: v1.0.0
  name: ninavirus
  namespace: virusapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: website
      app.kubernetes.io/part-of: ninavirus
      app.kubernetes.io/version: v1.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: website
        app.kubernetes.io/part-of: ninavirus
        app.kubernetes.io/version: v1.0.0
    spec:
      containers:
        - image: harbor.computational.bio.uni-giessen.de/virusapp/server:35e563f5a1a51c976830e7e56eafac2773f12a49
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
            - name: data-staging-volume
              mountPath: "/data"
          name: virus-website
          ports:
            - containerPort: 8080
      volumes:
        - name: config
          configMap:
            name: virus-fileconfig
        - name: data-staging-volume
          emptyDir: {}
      imagePullSecrets:
        - name: harbor-giessen
---
apiVersion: v1
kind: Service
metadata:
  name: ninavirus
  namespace: virusapp
spec:
  selector:
      app.kubernetes.io/name: website
      app.kubernetes.io/part-of: ninavirus
      app.kubernetes.io/version: v1.0.0
  ports:
    - protocol: TCP
      port: 3838
      targetPort: 3838
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ninavirus
  namespace: virusapp
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: nina-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: ui.virus.ingress.rancher.computational.bio
    http:
      paths:
      - backend:
          serviceName: ninavirus
          servicePort: 3838
        path: /
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - ui.virus.ingress.rancher.computational.bio
    secretName: ninvirus-secret # < cert-manager will store the created certificate in this secret.
---
